# stufio-modules-locale

./: README.md  pyproject.toml
stufio/modules/locale/: __init__.py  config.py  settings.py
stufio/modules/locale/api/: __init__.py  admin_locales.py  admin_translations.py  internal_translations.py  locales.py  translations.py
stufio/modules/locale/crud/: __init__.py  crud_locale.py  crud_translation.py
stufio/modules/locale/docs/: locale_module_architecture.dot
stufio/modules/locale/middleware/: __init__.py  locale_middleware.py
stufio/modules/locale/migrations/v20250501/: 01_init_collections.py  02_create_indexes.py  03_create_default_locales.py  04_add_supported_locales.py
stufio/modules/locale/models/: __init__.py  locale.py  translation.py
stufio/modules/locale/schemas/: __init__.py  locale.py  translation.py
stufio/modules/locale/services/: __init__.py  cache_service.py
stufio/modules/locale/tests/: conftest.py  test_api_locales.py  test_api_translations.py
