[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stufio-modules-locale"
version = "0.1.0"
description = "Stufio.com Module: Locale management and translations"
authors = [{name = "Ihar Finchuk", email = "if@if.codes"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "stufio>=0.1.0",
    "motor>=2.5.0",  # MongoDB driver
    "redis>=4.0.0",  # Redis client
    "fastapi>=0.68.0",  # FastAPI framework
]

[project.urls]
repository = "https://github.com/stufio-com/stufio-modules-locale"

[tool.setuptools]
package-dir = {"stufio.modules.locale" = "stufio/modules/locale"}
packages.find = {include = ["stufio.modules.locale", "stufio.modules.locale.*"]}